--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@
   license = "BSD-4-Clause"
   readme = "README.md"
   repository = "https://github.com/echelon/etherdream.rs"
+  documentation = "https://docs.rs/etherdream"
 
 [lib]
   name = "etherdream"
