Webcam raster spiral example
Based off a demo by Aron at SELEM 2017.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,7 @@
 [badges]
   travis-ci = { repository = "echelon/etherdream.rs" }
 
+[dev_dependencies]
+  camera_capture = "0.3"
+  image = "0.7"
+
