--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@
   ilda = "0.0.2"
   log = "0.3.*"
   net2 = "0.2.*"
+  point = "0.3.*"
 
 [badges]
   travis-ci = { repository = "echelon/etherdream.rs" }
